tests/typecheck/contracts.t/typecheck-return-3.scilla
scilla_version 0

library TypecheckReturn1

contract TypecheckReturn1()
field f_m: Map Uint32 (Option Uint32) = Emp Uint32 (Option Uint32)

procedure cannot_return_map() -> (Map String String)
  m := f_m;
  return m
end

